<resources>
    <string name="app_name">Gornak</string>
    <string name="name">Анастасия Горнак</string>
    <string name="hello">приветствует Вас!</string>
    <string name="account_url">https://github.com/shansilia</string>
    <string name="next">Перейти к приложению</string>
    <string name="description">Домашка</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="standard_layout">Стандартный макет</string>
    <string name="tight_layout">Плотный макет</string>
    <string name="small_layout_value">Портретная: %1$d иконки в ряд \nЛандшафтная: %2$d иконок в ряд</string>
    <string name="layout_value">Портретная: %1$d иконок в ряд \nЛандшафтная: %2$d иконок в ряд</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="ok">OK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="navigation_grid">Сетка</string>
    <string name="navigation_list">Список</string>
    <string name="navigation_settings">Настройки</string>

    <string name="app_dialog_title">Дальнейшее действие</string>
    <string-array name="app_dialog_action">
        <item>Удалить</item>
        <item>Частота: </item>
        <item>Информация</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->


    <string name="pref_header_ui">Темы и отображение</string>
    <string name="pref_header_app">Приложения</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_theme">Тема</string>
    <string-array name="pref_arr_theme">
        <item>@string/light_theme</item>
        <item>@string/dark_theme</item>
    </string-array>

    <string name="pref_title_layout">Макет</string>
    <string-array name="pref_arr_layout">
        <item>@string/standard_layout</item>
        <item>@string/tight_layout</item>
    </string-array>

    <string name="pref_title_behavior_remove">Поведение при удалении</string>
    <string-array name="pref_arr_behavior_remove">
        <item>Смещение на освободившееся место</item>
        <item>Оставление местаудоленного элемента свободным</item>
    </string-array>

    <string name="pref_title_welcome_enable">Показать welcome-page при следующем запуске</string>

    <string name="pref_title_sorting">Метод сортировки</string>
    <string-array name="pref_arr_sorting">
        <item>Сортировка по дате установки</item>
        <item>Сортировка в алфавитном порядке(A-Z)</item>
        <item>Сортировка в алфавитном порядке(Z-A)</item>
        <item>По количеству запусков</item>
        <item>Отсутствие сортировки</item>
    </string-array>

    <string name="pref_key_favourite">isLastFavourite</string>
    <string name="pref_title_favorite">В избранном</string>
    <string-array name="pref_arr_favorite">
        <item>Последние запущенные</item>
        <item>Наиболее используемые</item>
    </string-array>


    <string name="pref_key_favourite_time">time_interval</string>
    <string name="pref_title_favorite_time">Наиболее используемые за последние</string>
    <string-array name="pref_arr_favorite_time">
        <item>1 час</item>
        <item>6 часов</item>
        <item>сутки</item>
        <item>неделю</item>
    </string-array>

    <string name="pref_title_favorite_size">Количество приложений в избранном</string>
    <integer-array name="pref_arr_favorite_size">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </integer-array>

    <bool name="pref_true">true</bool>
    <string-array name="pref_list_values">
        <item>true</item>
        <item>false</item>
    </string-array>

    <string name="pref_size_layout_def">4</string>
    <string-array name="pref_size_layout_list_values">
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="phone">+375 29 207 22 04</string>
    <string name="mail">shansiliya@yandex.ru</string>
    <string name="vk">https://vk.com/shansilia</string>
    <string name="address">г. Минск</string>
    <string name="github">https://github.com/shansilia</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <integer-array name="list_pref_time_values">
        <item>1</item>
        <item>6</item>
        <item>24</item>
        <item>168</item>
    </integer-array>


    <string name="pref_sort_def">0</string>
    <string-array name="list_pref_sort_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="shared_preferences">by.md.gornak.homework_preferences</string>
    <string name="pref_key_show_welcome">isShowWelcomePage</string>
    <string name="pref_key_layout">isStandardLayout</string>
    <string name="pref_key_light_theme">isLightTheme</string>
    <string name="pref_key_sorting">sorting</string>
    <string name="pref_key_first_start">isFirstStart</string>
    <string name="attention">Внимание!</string>
    <string name="exit_warning_text">Вы точно хотите выйти из приложения?</string>
    <string name="cancel">Отмена</string>

</resources>
