<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_view_carousel"
            android:title="@string/navigation_desktop" />

        <item
            android:id="@+id/nav_grid"
            android:icon="@drawable/ic_view_module"
            android:title="@string/navigation_grid" />

        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/navigation_list" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_settings" />
    </group>

</menu>
