<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.md.gornak.homework.ThemeActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        style="@style/BorderLayout"
        android:orientation="vertical"
        android:padding="@dimen/normal_padding">

        <RadioButton
            android:id="@+id/rbStandardLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standard_layout"
            android:checked="true"
            />

        <TextView
            android:id="@+id/tvStandardLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_value"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:orientation="vertical"
        style="@style/BorderLayout"
        android:padding="@dimen/normal_padding">

        <RadioButton
            android:id="@+id/rbTightLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tight_layout"/>

        <TextView
            android:id="@+id/tvTightLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_value"/>

    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/NextButton"/>


</LinearLayout>
